# EDA2TrabalhoPratico

./: BridgeList.cpp  BridgeList.h  CMakeLists.txt  CityList.cpp  CityList.h  Dijkstra.cpp  HouseList.cpp  HouseList.h  MatchQueue.cpp  MatchQueue.h  README.md  RoundList.cpp  RoundList.h  RouteList.cpp  RouteList.h  StopoverQueue.cpp  StopoverQueue.h  StreetList.cpp  StreetList.h  main.cpp
